welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:43: error: ';' expected but ',' found.
	gauche(),
                ^