welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
partie();
}

def partie(){
	Diag1(Color.red);
	avance();avance();
	Diag2(Color.blue);
	recule();recule();
	gauche();
	avance();avance();
	droite();
	Diag2(Color.yellow);
	avance();avance();
	Diag1(Color.green);
}


def Diag1(c:Color)(){
	avance();
	setBrosseCouleur(c);
	baisseBrosse();
	leveBrosse();
	gauche();
	avance();
	gauche();
	avance();
	setBrosseCouleur(c);
	baisseBrosse();
	leveBrosse();
	gauche();
	avance();
	gauche();
}


def Diag2(c:Color)(){
	setBrosseCouleur(c);
	baisseBrosse();
	leveBrosse();
	avance();
	gauche(),
	avance();
	setBrosseCouleur(c);
	baisseBrosse();
	leveBrosse();
	gauche();
	avance();
	gauche();
	avance();
	gauche();
		
}
